Fixed issue with image not resizing correctly on mobile.

--- a/src/components/ProjectCard.css
+++ b/src/components/ProjectCard.css
@@ -5,10 +5,11 @@
 }
 
 .mockup-image {
-  height: 200px;
   width: 100%;
+  height: auto;
   object-fit: cover;
   margin-bottom: 24px;
+  max-width: 100%;
 }
 
 .project-name {
@@ -75,7 +76,7 @@
 }
 
 /* Media Queries for tablet*/
-@media screen and (min-width: 667px) {
+@media screen and (min-width: 745px) {
   .mockup-image {
     height: 280px;
     width: 200px;
